Bug 387387 - In the Filesystem pane, folders are created in the wrong place.
Summary: In the Filesystem pane, folders are created in the wrong place.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: UI: general (other bugs)
Version First Reported In: 5.1.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2017-11-28 08:36 UTC by FeepingCreature
Modified: 2018-03-10 14:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FeepingCreature 2017-11-28 08:36:47 UTC
Steps:

Open KDevelop 5.1.2. 
Open the Filesystem pane on the left.
Expand a subfolder.
Right-click a subfolder and select "Create New -> Folder".

Expected:

The folder is created underneath the subfolder that was clicked.

Actual:

The folder is created in the root folder selected in the Filesystem tab.
Comment 1 Kevin Funk 2017-11-28 08:55:13 UTC
This sounds like something a newcomer could tackle.
Comment 2 Eike Hein 2018-03-10 14:44:15 UTC
Git commit 032709c17f004d2fca50ff4bc485785519cf58ad by Eike Hein, on behalf of Pierre Rukgaber.
Committed on 10/03/2018 at 14:43.
Pushed by hein into branch 'master'.

Use correct item URL for Create New context menu

Summary:
The activatedMenu function was not using the given items path, which resulted in new folders or files being created in the root directory of the filemanager plugin.

Reviewers: #frameworks, dfaure

Reviewed By: dfaure

Subscribers: hein, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D11153

M  +1    -2    src/filewidgets/kdiroperator.cpp

https://commits.kde.org/kio/032709c17f004d2fca50ff4bc485785519cf58ad