Use correct item URL for Create New context menu

Summary:
The activatedMenu function was not using the given items path, which resulted in new folders or files being created in the root directory of the filemanager plugin.
BUG: 387387

Reviewers: #frameworks, dfaure

Reviewed By: dfaure

Subscribers: hein, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D11153